--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <title>Animated Website</title>
   </head>
   <body>
+    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+<script src="js/bootstrap.js"></script>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
